# ai-functions

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: pypi-publish-on-release.yml
docs/: tutorial.md
examples/: _create_data.py  calculator.py  context_management.py  contract_analyzer.py  data_normalizer.py  fuzzy_merge.py  integral_calculator.py  meeting_summary.py  multiagent_orchestration.py  pyproject.toml  receipt_parser_tool.py  review_analyzer.py  sql_generator.py  stock_report.py  translate.py  universal_loader.py  utils.py
examples/auto_sensor_data_analysis_agent/: README.md  analyze_anomalies_if.py  analyze_anomalies_pca.py  generate_data.py  requirements.txt
src/ai_functions/: __init__.py  core.py  decorator.py
src/ai_functions/context_management/: context_manager.py  summarizing_window_manager.py
src/ai_functions/tools/: __init__.py  local_python_executor.py
src/ai_functions/types/: __init__.py  ai_function.py  errors.py
src/ai_functions/utils/: __init__.py  _async.py  _template.py  _type.py
src/ai_functions/validation/: __init__.py  post_conditions.py
tests/: conftest.py
tests/test_context_management/: test_context_manager.py  test_summarizing_window_manager.py
tests/test_core/: __init__.py  test_core.py  test_decorator.py
tests/test_tools/: __init__.py  test_local_python_executor.py
tests/test_types/: __init__.py  test_ai_function_types.py  test_errors.py
tests/test_utils/: test_async_utils.py  test_template.py  test_type_utils.py
tests/test_validation/: test_post_conditions.py
